name:               package-test
version:            0.1.0
synopsis:           Universal build and test script for Haskell packages
description:
  Perform build and test on your package uniformly from local
  machine/Travis/Appveyor with a simple CLI command to make sure that the
  package works well on all platforms (Linux/OSX/Windows) and for all build
  tools (stack/cabal). Use it for CI and you can reproduce exactly the same
  build on your local machine as well very easily.
  .
  > $ env BUILD=stack package-test.sh
  > $ env BUILD=cabal package-test.sh
  > $ stack exec env BUILD=cabal package-test.sh
  .
  This package provides templates to use the script for Travis and Appveyor
  builds. Templates can be used without any customization or you can customize
  them according to your needs. The script tests the source distribution of the
  package to make sure the source tarball is buildable. You can also send
  coverage information to coveralls.io using hpc-coveralls with just a simple
  flag.
  .
  This package also serves as a fully functional minimal Haskell package
  example with source, test, benchmark and CI setup.

homepage:            https://github.com/harendra-kumar/package-test
bug-reports:         https://github.com/harendra-kumar/package-test/issues
license:             BSD3
license-file:        LICENSE
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2017 Harendra Kumar
category:            Testing, CI
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    Changelog.md
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/harendra-kumar/package-test

library
    hs-source-dirs:    src
    exposed-modules:   Hello
    default-language: Haskell2010
    build-depends: base >= 4.8   && < 5

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      package-test
    , base >= 4.8   && < 5
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
      package-test
    , base >= 4.8   && < 5
  default-language: Haskell2010
