name:               packcheck
version:            0.1.0
synopsis:           Universal build and CI testing for Haskell packages
description:
  `packcheck` is a minimal yet complete "hello world" Haskell package with model
  `travis` and `appveyor` config files that can be used unmodified in any Haskell
  package. The CI configs can be modified `declaratively` to adapt to `any`
  kind of build scenario you can imagine.
  .
  The package includes @packcheck.sh@, a high level universal super build script
  to uniformly, consistently build and comprehensively sanity test a Haskell
  package across build tools (stack/cabal) and across all platforms
  (Linux\/MacOS\/Windows).  You do not need to be familiar with any of the build
  tools to use it.
  .
  To use it for CI, simply copy the @.travis.yml@, @appveyor.yml@ config files from this
  package to your package and that's it. It should work without modification,
  of course you can edit them to customize. For use on local host, just copy
  over the @packcheck.sh@ script and put it in your `PATH`. Run the script from
  the package directory of the package you want to build.
  .
  > $ packcheck.sh stack
  > $ packcheck.sh cabal
  .
  This is also a minimal yet complete model package (with tests, benchmarks,
  Linux\/MacOS\/Windows CI already working) that can be used as a starting point to
  develop a new package. Beginners can use it to learn about haskell package
  metadata structure.
  .
  See the README for comprehensive documentation.

homepage:            https://github.com/harendra-kumar/packcheck
bug-reports:         https://github.com/harendra-kumar/packcheck/issues
license:             BSD3
license-file:        LICENSE
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2017 Harendra Kumar
category:            Testing, CI
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    Changelog.md
    README.md
    stack.yaml
    .ci/stack-8.0.yaml

source-repository head
    type: git
    location: https://github.com/harendra-kumar/packcheck

library
    hs-source-dirs:    src
    exposed-modules:   Hello
    default-language: Haskell2010
    build-depends: base >= 4.8   && < 5

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      packcheck
    , base >= 4.8   && < 5
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
      packcheck
    , base >= 4.8   && < 5
  default-language: Haskell2010
