name:               packcheck
version:            0.7.0
synopsis:           Universal build and CI testing for Haskell packages
description:
  This package contains a universal CI/build script @packcheck.sh@ and config
  files designed such that you can just copy over
  @.github\/workflows/packcheck.yml@, @appveyor.yml@ or @.circleci/config.yml@ 
  to your package repo and your package is CI ready
  in a jiffy.  You can build and test packages on local machine as well. For
  local testing, copy @packcheck.sh@ to your local machine, put it in your
  PATH, and run it from your package directory:
  .
  > $ packcheck.sh cabal
  > $ packcheck.sh stack
  .
  You can try the script on this package itself. It builds and comprehensively
  sanity tests a Haskell package across build tools (stack/cabal), uniformly,
  consistently and across all platforms (Linux\/MacOS\/Windows).  You do not
  need to be familiar with any of the build tools to use it.
  .
  This is also a minimal yet complete model package (with tests, benchmarks, CI
  already working) that can be used as a starting point to develop a new
  package. Beginners can use it to learn about haskell package metadata
  structure, benchmarks, tests, CI configs etc.
  .
  See the README for comprehensive documentation.

homepage:            https://github.com/composewell/packcheck
bug-reports:         https://github.com/composewell/packcheck/issues
license:             BSD3
license-file:        LICENSE
tested-with:           GHC==9.8.1
                     , GHC==9.6.3
                     , GHC==9.4.8
                     , GHC==9.2.8
                     , GHC==9.0.1
                     , GHC==8.10.7
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2017 Harendra Kumar
category:            Testing, CI
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    Changelog.md
    README.md
    stack.yaml
    .ci/stack-8.0.yaml
    .circleci/config.yml
    .github/workflows/packcheck.yml
    appveyor.yml
    cabal.project.coveralls
    cabal.project
    packcheck.sh
    packcheck-safe.sh
    packcheck-remote.sh
    MAINTAINING.md

source-repository head
    type: git
    location: https://github.com/composewell/packcheck

flag dev
  description: Development build
  manual: True
  default: False

library
    hs-source-dirs:    src
    exposed-modules:   Hello
    default-language: Haskell2010
    build-depends: base >= 4.8   && < 5

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      packcheck
    , base >= 4.8   && < 5
  default-language: Haskell2010
  if flag(dev)
    ghc-options:    -Wall

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
      packcheck
    , base >= 4.8   && < 5
  default-language: Haskell2010
